syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.validator;

// this line is used by starport scaffolding # proto/tx/import
import "validator/description.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/validator/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateValidator(MsgCreateValidator) returns (MsgCreateValidatorResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateValidator {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string pubKey = 3;
  Description description = 4 [(gogoproto.nullable) = false];
}

message MsgCreateValidatorResponse {
}

// this line is used by starport scaffolding # proto/tx/message
